--- a/templates/Fiscal/emissaoFiscalPV/formFiscal.html.twig
+++ b/templates/Fiscal/emissaoFiscalPV/formFiscal.html.twig
@@ -71,7 +71,7 @@
 			
 		{% if permiteFaturamento %}
 				<button type="button" value="Cancelar" class="btn btn-primary btn-lg"
-					data-form="emissao_fiscal_pv" data-target="#confirmationModal"
+					data-form="emissao_fiscal" data-target="#confirmationModal"
 					data-toggle="modal">
 					<i class="fas fa-file-invoice" aria-hidden="true"></i> Faturar
 				</button>
