--- a/templates/Fiscal/emissaoNFe/form_itens.html.twig
+++ b/templates/Fiscal/emissaoNFe/form_itens.html.twig
@@ -74,6 +74,11 @@
                     </table>
                 </div>
 
+
+                {{ form_row(form.subtotal) }}
+                {{ form_row(form.totalDescontos) }}
+                {{ form_row(form.valorTotal) }}
+
             </div>
         </div>
     {% endif %}
