--- a/templates/Fiscal/emissaoNFe/cartaCorrecaoForm.html.twig
+++ b/templates/Fiscal/emissaoNFe/cartaCorrecaoForm.html.twig
@@ -20,13 +20,7 @@
 
 	<div class="card-body">
 
-		<div class="form-group row">
-			<label class="col-form-label col-sm-2 form-control-label">PV</label>
-			<div class="col-sm-10">
-				<input type="text" class="form-control" disabled="true"
-					value="{{ "%06d"|format(venda.pv) }} de {{ venda.dtVenda|date("d/m/Y") }}. Vendedor: {{ venda.vendedor.pessoa.nome }}">
-			</div>
-		</div>
+
 
 		{% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
 
@@ -35,6 +29,19 @@
 		{{ form_row(form._token) }}
 
 		{{ form_row(form._info_status) }}
+
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2 form-control-label">Número/Série (UUID)</label>
+			<div class="col-sm-2">
+                {{ form_widget(form.numero_nf) }}
+			</div>
+			<div class="col-sm-2">
+                {{ form_widget(form.serie) }}
+			</div>
+			<div class="col-sm-6">
+                {{ form_widget(form.uuid) }}
+			</div>
+		</div>
 
 		{{ form_row(form.carta_correcao) }}
 
@@ -46,15 +53,15 @@
 
 		{% if permiteCancelamento %}
 				<button type="button" value="Enviar" class="btn btn-warning"
-					data-form="emissao_fiscal_pv" data-target="#confirmationModal"
+					data-form="emissao_fiscal" data-target="#confirmationModal"
 					data-toggle="modal">
 					<i class="fas fa-ban" aria-hidden="true"></i> Enviar
 				</button>
 		{% endif %}
 		
-		{% if permiteReimpressaoCancelamento %}
+		{% if permiteReimpressaoCartaCorrecao %}
 				<button type="button" value="Reimprimir Carta de Correção" class="btn btn-secondary"
-					data-url="{{ url('fis_emissaofiscalpv_reimprimirCartaCorrecao', {notaFiscal: notaFiscal.id, venda: venda.id}) }}"
+					data-url="{{ url('fis_emissaonfe_reimprimirCartaCorrecao', {notaFiscal: notaFiscal.id}) }}"
 					data-target="#confirmationModal" data-toggle="modal">
 					<i class="fas fa-envelope-square" aria-hidden="true"></i> Reimprimir Carta de Correção
 				</button>
