BancoController et al

--- a/templates/Financeiro/bancoForm.html.twig
+++ b/templates/Financeiro/bancoForm.html.twig
@@ -11,11 +11,11 @@
 
 		<div class="row">
 			<div class="col-8">
-				<h3>Carteira</h3>
+				<h3>Banco</h3>
 			</div>
 			<div class="col-4 text-right">
 				<button type="button" class="btn btn-secondary"
-					onclick="window.location.href='{{ url('fin_carteira_list') }}'">
+					onclick="window.location.href='{{ url('fin_banco_list') }}'">
 					<i class="fas fa-sync" aria-hidden="true"></i> Listar
 				</button>
 			</div>
@@ -39,7 +39,7 @@
 				</button>
 
 				<button type="button" value="Resetar" class="btn btn-secondary"
-					data-url="{{ url('fin_carteira_form') }}"
+					data-url="{{ url('fin_banco_form') }}"
 					data-target="#confirmationModal" data-toggle="modal">
 					<i class="fas fa-undo" aria-hidden="true"></i> Recarregar
 				</button>
