Emissao NFe praticamente 100%

--- a/templates/Financeiro/carteiraList.html.twig
+++ b/templates/Financeiro/carteiraList.html.twig
@@ -87,7 +87,8 @@
 					<h4>Pesquisar</h4>
 
 					<div class="form-group">
-						<label for="p_descricao">Descrição</label> <input type="text"
+						<label for="p_descricao">Descrição</label>
+						<input type="text"
 							class="form-control" id="filter[descricao]"
 							name="filter[descricao]"
 							value="{{ filter.descricao|default('') }}">
