--- a/templates/Fiscal/emissaoNFe/form_cabecalho.html.twig
+++ b/templates/Fiscal/emissaoNFe/form_cabecalho.html.twig
@@ -10,8 +10,6 @@
 
     {{ form_widget(form.pessoa_id) }}
 
-    {{ form_row(form.tipo) }}
-
     {{ form_row(form.tipoPessoa) }}
 
     <div class="form-group row">
@@ -33,7 +31,7 @@
     {{ form_row(form.natureza_operacao) }}
 
     {{ form_row(form.finalidade_nf) }}
-    {{ form_row(form.entrada_saida) }}
+    {{ form_row(form.entrada) }}
 
     {{ form_row(form.cpf) }}
     {{ form_row(form.nome) }}
@@ -74,67 +72,7 @@
 
     {{ form_row(form.info_compl) }}
 
-    <div class="row">
-        <div class="col text-right">
 
-
-            {% if permiteFaturamento %}
-
-                <button type="submit" class="btn btn-primary btn-lg" value="Salvar">
-                    <i class="fas fa-save" aria-hidden="true"></i> Salvar
-                </button>
-
-                <button type="button" class="btn btn-success btn-lg" value="Faturar"
-                        data-url="{{ url('fis_emissaonfe_faturar', {notaFiscal: notaFiscal.id}) }}"
-                        data-target="#confirmationModal" data-toggle="modal">
-                    <i class="fas fa-file-invoice" aria-hidden="true"></i> Faturar
-                </button>
-
-            {% endif %}
-
-            {% if permiteReimpressao %}
-                <button type="button" value="Reimprimir" class="btn btn-secondary"
-                        data-url="{{ url('fis_emissaonfe_reimprimir', {notaFiscal: notaFiscal.id}) }}"
-                        data-target="#confirmationModal" data-toggle="modal">
-                    <i class="fas fa-print" aria-hidden="true"></i> Reimprimir
-                </button>
-            {% endif %}
-
-
-            {% if permiteCancelamento or permiteReimpressaoCancelamento %}
-                <button type="button" id="Cancelar" class="btn btn-warning"
-                        onclick="window.location.assign('{{ url('fis_emissaonfe_cancelarForm', {notaFiscal: notaFiscal.id}) }}')">
-                    <i class="fas fa-ban" aria-hidden="true"></i> Cancelar
-                </button>
-            {% endif %}
-
-            {% if permiteCartaCorrecao %}
-                <button type="button" id="Carta de Correção" class="btn btn-warning"
-                        onclick="window.location.assign('{{ url('fis_emissaonfe_cartaCorrecaoForm', {notaFiscal: notaFiscal.id}) }}')">
-                    <i class="fas fa-envelope-square" aria-hidden="true"></i> Carta de Correção
-                </button>
-            {% endif %}
-
-            {% if notaFiscal.id %}
-                <button type="button" value="Consultar Status" class="btn btn-secondary"
-                        data-url="{{ url('fis_emissaonfe_consultarStatus', {notaFiscal: notaFiscal.id}) }}"
-                        data-target="#confirmationModal"
-                        data-toggle="modal">
-                    <i class="fab fa-searchengin" aria-hidden="true"></i> Consultar Status
-                </button>
-            {% endif %}
-
-            <button type="button" value="Resetar" class="btn btn-secondary"
-                    data-url="{{ url('fis_emissaonfe_form', {notaFiscal: notaFiscal.id}) }}"
-                    data-target="#confirmationModal" data-toggle="modal">
-                <i class="fas fa-undo" aria-hidden="true"></i> Recarregar
-            </button>
-
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12">&nbsp;</div>
-    </div>
 
 
 </div>
