--- a/templates/CRM/clienteForm.html.twig
+++ b/templates/CRM/clienteForm.html.twig
@@ -61,21 +61,5 @@
 
 
 {% block down_scripts %}
-
-
-<script>
-	//Bind click to OK button within popup
-	$('#btnYes').on(
-			'click',
-			function(e) {
-				var modalDiv = $(e.delegateTarget);
-				var url = $(this).data('url');
-				var form = $('<form></form>').attr("method", "get").attr(
-						"action", url);
-				$(form).appendTo('body').submit();
-
-			});
-
-</script>
-
+	<script src="{{ asset('build/fis/emissaoNFe/form.js') }}"></script>
 {% endblock %}
