--- a/templates/Financeiro/operadoraCartaoList.html.twig
+++ b/templates/Financeiro/operadoraCartaoList.html.twig
@@ -11,7 +11,7 @@
 
             <div class="row">
                 <div class="col-8">
-                    <h3>Operadoras de Cartões</h3>
+                    <h3><i class="nav-icon fas fa-building"></i> Operadoras de Cartões</h3>
                 </div>
                 <div class="col-4 text-right">
                     <button type="button" class="btn btn-primary"
