--- a/templates/mainmenu.html.twig
+++ b/templates/mainmenu.html.twig
@@ -238,11 +238,11 @@
                 <ul class="nav-dropdown-items" style="background-color: black">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('fin_modo_list') }}">
+                        <a class="nav-link" href="{{ url('fis_emissaofiscalpv_ini') }}">
                             <i class="nav-icon fas fa-receipt"></i>NFe/NFCe por PV</a></li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('fin_modo_list') }}">
+                        <a class="nav-link" href="{{ url('fis_emissaonfe_list') }}">
                             <i class="nav-icon fas fa-file-invoice"></i>NFe</a></li>
 
                     <li class="nav-item">
