--- a/templates/Fiscal/emissaoFiscalPV/ini.html.twig
+++ b/templates/Fiscal/emissaoFiscalPV/ini.html.twig
@@ -24,18 +24,22 @@
 			<div class="col-sm-8">
 				<input type="number" id="pv" name="pv" class="form-control" min="1" step="1" pattern="\d*" autofocus="autofocus"></select>
 			</div>
+
+            {% if tudook %}
 			<div class="col-sm-2 text-right">
 				<button type="button" id="carregar" class="btn btn-secondary"
 					onclick="window.location.assign('{{ url('fis_emissaofiscalpv_processarPV') }}' + '/' + $('#pv').val())">
 					<i class="fas fa-sync" aria-hidden="true"></i> Carregar
 				</button>
 			</div>
+            {% endif %}
+
 		</div>
 
 	</div>
 </div>
 
-
+    {{ include('Util/flashes.html.twig') }}
 
 
 {% endblock %}
