--- a/templates/mainmenu.html.twig
+++ b/templates/mainmenu.html.twig
@@ -15,7 +15,7 @@
                 </a>
                 <ul class="nav-dropdown-items" style="background-color: black">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('fin_modo_list') }}">
+                        <a class="nav-link" href="{{ url('crm_cliente_list') }}">
                             <i class="nav-icon fas fa-user"></i>Clientes</a></li>
                     <li class="nav-item" style="background-color: white; height: 1px"></li>
                 </ul>
