--- a/templates/Financeiro/operadoraCartaoList.html.twig
+++ b/templates/Financeiro/operadoraCartaoList.html.twig
@@ -1,116 +1,26 @@
-{% extends 'index.html.twig' %}
+{% extends 'list.html.twig' %}
 
 
+{% set titulo = 'Operadoras de Cartões' %}
+{% set route_form = 'fin_operadoraCartao_form' %}
+{% set route_list = 'fin_operadoraCartao_list' %}
+{% set route_list_ajax = 'fin_operadoraCartao_datatablesJsList' %}
+{% set list_id = 'operadoraCartaoList' %}
 
+{% set campos_pesquisar %}
 
-{% block page_content %}
-
-
-    <div class="card">
-        <div class="card-header">
-
-            <div class="row">
-                <div class="col-8">
-                    <h3><i class="nav-icon fas fa-building"></i> Operadoras de Cartões</h3>
-                </div>
-                <div class="col-4 text-right">
-                    <button type="button" class="btn btn-primary"
-                            onclick="window.location.href='{{ url('fin_operadoraCartao_form') }}'">
-                        <i class="fas fa-file" aria-hidden="true"></i> Novo
-                    </button>
-                    <button type="button" class="btn btn-secondary"
-                            data-target="#pesquisarModal" data-toggle="modal">
-                        <i class="fas fa-search" aria-hidden="true"></i> Pesquisar
-                    </button>
-                    <button type="button" class="btn btn-secondary"
-                            onclick="window.location.href='{{ url('fin_operadoraCartao_list') }}'">
-                        <i class="fas fa-sync" aria-hidden="true"></i> Recarregar
-                    </button>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="card-body">
-
-            <div class="table-responsive-sm">
-                <table class="table table-striped table-hover crsr-datatable">
-
-                    <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Descrição</th>
-                        <th scope="col">Carteira</th>
-                        <th scope="col"></th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-                    {% for item in dados %}
-                        <tr>
-                            <th scope="row">{{ loop.index }}</th>
-                            <td>{{ item.descricao }}</td>
-                            <td>{{ item.carteira.codigo }} - {{ item.carteira.descricao }}</td>
-                            <td class="text-right">
-                                <button type="button" class="btn btn-primary"
-                                        onclick="window.location.href='{{ url('fin_operadoraCartao_form', {id: item.id}) }}'">
-                                    <i class="fas fa-wrench" aria-hidden="true"></i>
-                                </button>
-
-                                <button type="button" class="btn btn-danger"
-                                        data-url="{{ url('fin_operadoraCartao_delete', {id: item.id}) }}"
-                                        data-token="{{ csrf_token('delete') }}"
-                                        data-target="#confirmationModal" data-toggle="modal">
-                                    <i class="fa fa-trash" aria-hidden="true"></i>
-                                </button>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-
-                </table>
-            </div>
-        </div>
+    <div class="form-group">
+        <label for="p_descricao">Descrição</label>
+        <input type="text"
+               class="form-control" id="filter[descricao]"
+               name="filter[descricao]"
+               value="{{ filter.descricao|default('') }}">
     </div>
 
 
-    <div class="modal fade" id="pesquisarModal" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <form action="{{ url('fin_operadoraCartao_list') }}" method="get">
-                    <div class="modal-body">
-                        <h4>Pesquisar</h4>
-
-                        <div class="form-group">
-                            <label for="p_descricao">Nome</label>
-                            <input type="text" class="form-control" id="filter[descricao]"
-                                   name="filter[descricao]"
-                                   value="{{ filter.descricao|default('') }}">
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default"
-                                id="btnCancelarPesquisa" data-dismiss="modal">
-                            <i class="fa fa-ban" aria-hidden="true"></i> Cancelar
-                        </button>
-                        <button type="submit" class="btn btn-danger" id="btnPesquisar">
-                            <i class="fa fa-trash" aria-hidden="true"></i> Pesquisar
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-
-
-
-{% endblock %}
-
+{% endset %}
 
 
 {% block down_scripts %}
-
-
-    {{ include('Util/confirmationModal.html.twig') }}
-
+    <script src="{{ asset('build/fin/operadoraCartaoList.js') }}"></script>
 {% endblock %}
